--- a/style.css
+++ b/style.css
@@ -1,4 +1,268 @@
-body {
-	background-color: blue;
-font-size: 
+body{
+	font-family: "Roboto",'Montserrat',Calibri !important;
+}
+
+html{
+	scroll-behavior: auto;
+}
+
+hr {
+    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
+    border: 1px solid black !important;
+    border-top: 1px solid rgba(0,0,0,.1) !important;
+}
+
+.navbar{
+	background-color: white !important;
+	border-bottom: 1px solid black;
+}
+
+.navbar-light .navbar-brand{
+color: #37B24A !important;
+}
+
+.paragraph{
+font-size: 20px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -1.1px;
+    padding: 10px 25px 10px 25px;
+}
+
+.rightParagraph{
+   margin-top: 20px;
+    font-weight: 500;
+    font-size: 20px;
+    padding: 10px 25px 10px 25px;
+    line-height: normal;
+    letter-spacing: -1.1px;
+}
+
+.letterHeading1 {
+      font-size: 2.75rem;
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    color: #37B24A;
+
+}
+
+.letterHeading2 {
+        font-size: 1.25rem;
+    text-align: center;
+    font-weight: 600;
+    letter-spacing: 2.9px;
+    color: #000;
+    margin-top: -17px;
+}
+
+.letterHeading h3 h5{
+	line-height: 2.5px;
+}
+
+.hr{
+	border-bottom: 2px solid black;
+}
+
+.jumbotron{
+	background-color: white !important;
+}
+
+/*MEDIA QUERIES STARTS*/
+
+/*@media only screen and (min-width: 655px & min-height: 606px){
+
+.aboutImg{
+	margin-left: 16% !important;
+	padding: 30px 25px 10px 25px !important;
+	margin-top: 50px !important;
+}
+
+.img-fluid{
+	    margin-left: 14%;
+}
+
+}*/ 
+
+@media only screen and (min-width: 768px){
+   
+   .letterHeading{
+    margin-top: 45px;
+   }
+
+
+    .letterHeading1{
+        text-align: left;
+        margin-left: -91px;
+
+    }
+
+    .letterHeading2  {
+        text-align: left;
+            margin-left: -83px;
+            letter-spacing: 3.6px;
+    }
+
+    .rightParagraph {
+     margin-top: 0px;
+         font-weight: 500;
+    font-size: 20px;
+    padding: 0px;
+    line-height: normal;
+    letter-spacing: -1.1px;
+        margin-left: -88px;
+}
+    .letterImg{
+width: 556px !important;
+    margin-left: -34px;
+    }
+
+} 
+
+@media only screen and (min-width: 1024px) {
+
+.navbar-expand-lg .navbar-nav{
+	margin-left: 50%;
+}
+
+	.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 1.5rem !important;
+    padding-left: 3.5rem !important;
+}
+
+.aboutImg{
+	width: 700px;
+	margin-left: 140px;
+}
+.paragraph{
+	font-size: 25px;
+margin-left: 20px;
+}
+
+.rightParagraph{
+        margin-top:0px;
+    font-weight: 500;
+    font-size: 22px;
+     padding: 0px; 
+    line-height: normal;
+    letter-spacing: -1.1px;
+}
+
+.letterHeading1 {
+    font-size: 3.75rem;
+    text-align: left;
+    font-weight: 700;
+    letter-spacing: 3.9px;
+    color: #37B24A;
+}
+
+.letterHeading2 {
+   font-size: 1.95rem;
+    text-align: left;
+    font-weight: 600;
+    letter-spacing: 4.9px;
+    color: #000;
+}
+
+.letterHeading {
+margin-top: 60px !important;
+}
+
+
+}
+
+@media only screen and (min-width: 1280px){
+
+	    .aboutImg{
+	    	margin-left: 300px;
+}
+
+.paragraph{
+	font-size: 25px;
+margin-left: 20px;
+}
+
+.rightParagraph{
+        margin-top: 0px;
+    font-weight: 500;
+    font-size: 30px;
+    padding: 0px;
+    line-height: normal;
+    letter-spacing: -1.1px;
+}
+
+.letterHeading1 {
+    font-size: 3.75rem;
+    text-align: left;
+    font-weight: 700;
+    letter-spacing: 3.9px;
+    color: #37B24A;
+}
+
+.letterHeading2 {
+    font-size: 2.25rem;
+    text-align: left;
+    font-weight: 600;
+    letter-spacing: 2.9px;
+    color: #000;
+}
+
+.letterHeading {
+margin-top: 60px;   
+}
+
+}
+
+@media only screen and (min-width: 1440px){
+	    .aboutImg{
+	    	margin-left: 25%;
+}
+
+.paragraph{
+	font-size: 30px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -1.1px;
+    margin-left: 20px;
+}
+
+.rightParagraph{
+       font-weight: 500;
+    font-size: 30px;
+    padding: 10px 20px 10px 10px;
+    line-height: normal;
+    letter-spacing: -1.1px;
+    text-align: left;
+        margin-left: -158px !important;
+}
+
+.letterHeading1 {
+      font-size: 3.75rem;
+    text-align: left;
+    font-weight: 700;
+    letter-spacing: 3.9px;
+    color: #37B24A;
+    margin-top: 14px;
+}
+
+.letterHeading2 {
+       font-size: 2.25rem;
+    text-align: left;
+    font-weight: 600;
+    letter-spacing: 2.9px;
+    color: #000;
+    margin-top: -19px;
+}
+
+.letterHeading {
+    margin-top: 72px !important;
+    margin-left: -75px;
+}
+
+.letterImg {
+    width: 756px !important;
+    margin-left: -34px;
+}
+
 }
