--- a/style.css
+++ b/style.css
@@ -9,21 +9,21 @@ html{
 hr {
     margin-top: 1rem !important;
     margin-bottom: 1rem !important;
-    border: 1px solid black !important;
+    border: 1px solid lightgrey !important;
     border-top: 1px solid rgba(0,0,0,.1) !important;
 }
 
 .navbar{
 	background-color: white !important;
-	border-bottom: 1px solid black;
+	/*border-bottom: 1px solid black;*/
 }
 
 .navbar-light .navbar-brand{
-color: #37B24A !important;
+    color: #37B24A !important;
 }
 
 .paragraph{
-font-size: 20px;
+    font-size: 20px;
     font-weight: 500;
     line-height: normal;
     letter-spacing: -1.1px;
@@ -31,25 +31,25 @@ font-size: 20px;
 }
 
 .rightParagraph{
-   margin-top: 20px;
-    font-weight: 500;
-    font-size: 20px;
-    padding: 10px 25px 10px 25px;
-    line-height: normal;
-    letter-spacing: -1.1px;
+ margin-top: 20px;
+ font-weight: 500;
+ font-size: 20px;
+ padding: 10px 25px 10px 25px;
+ line-height: normal;
+ letter-spacing: -1.1px;
 }
 
 .letterHeading1 {
-      font-size: 2.75rem;
-    text-align: center;
-    font-weight: 700;
-    letter-spacing: 1.5px;
-    color: #37B24A;
+  font-size: 2.75rem;
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  color: #37B24A;
 
 }
 
 .letterHeading2 {
-        font-size: 1.25rem;
+    font-size: 1.25rem;
     text-align: center;
     font-weight: 600;
     letter-spacing: 2.9px;
@@ -69,6 +69,24 @@ font-size: 20px;
 	background-color: white !important;
 }
 
+.contactHeadings{
+          font-size: 2.75rem;
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    color: #37B24A; 
+}
+
+#mobileNumber{
+    font-size: 1.25rem;
+    text-align: center;
+    font-weight: 600;
+    letter-spacing: 1.3px;
+    color: #000;
+    margin-top: -8px;
+}
+
+
 /*MEDIA QUERIES STARTS*/
 
 /*@media only screen and (min-width: 655px & min-height: 606px){
@@ -86,47 +104,47 @@ font-size: 20px;
 }*/ 
 
 @media only screen and (min-width: 768px){
-   
-   .letterHeading{
+
+ .letterHeading{
     margin-top: 45px;
-   }
-
-
-    .letterHeading1{
-        text-align: left;
-        margin-left: -91px;
-
-    }
-
-    .letterHeading2  {
-        text-align: left;
-            margin-left: -83px;
-            letter-spacing: 3.6px;
-    }
-
-    .rightParagraph {
-     margin-top: 0px;
-         font-weight: 500;
-    font-size: 20px;
-    padding: 0px;
-    line-height: normal;
-    letter-spacing: -1.1px;
-        margin-left: -88px;
 }
-    .letterImg{
-width: 556px !important;
+
+
+.letterHeading1{
+    text-align: left;
+    margin-left: -91px;
+
+}
+
+.letterHeading2  {
+    text-align: left;
+    margin-left: -83px;
+    letter-spacing: 3.6px;
+}
+
+.rightParagraph {
+   margin-top: 0px;
+   font-weight: 500;
+   font-size: 20px;
+   padding: 0px;
+   line-height: normal;
+   letter-spacing: -1.1px;
+   margin-left: -88px;
+}
+.letterImg{
+    width: 556px !important;
     margin-left: -34px;
-    }
+}
 
 } 
 
 @media only screen and (min-width: 1024px) {
 
-.navbar-expand-lg .navbar-nav{
-	margin-left: 50%;
-}
+    .navbar-expand-lg .navbar-nav{
+       margin-left: 50%;
+   }
 
-	.navbar-expand-lg .navbar-nav .nav-link {
+   .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 1.5rem !important;
     padding-left: 3.5rem !important;
 }
@@ -137,14 +155,14 @@ width: 556px !important;
 }
 .paragraph{
 	font-size: 25px;
-margin-left: 20px;
+    margin-left: 20px;
 }
 
 .rightParagraph{
-        margin-top:0px;
+    margin-top:0px;
     font-weight: 500;
     font-size: 22px;
-     padding: 0px; 
+    padding: 0px; 
     line-height: normal;
     letter-spacing: -1.1px;
 }
@@ -158,15 +176,15 @@ margin-left: 20px;
 }
 
 .letterHeading2 {
-   font-size: 1.95rem;
-    text-align: left;
-    font-weight: 600;
-    letter-spacing: 4.9px;
-    color: #000;
+ font-size: 1.95rem;
+ text-align: left;
+ font-weight: 600;
+ letter-spacing: 4.9px;
+ color: #000;
 }
 
 .letterHeading {
-margin-top: 60px !important;
+    margin-top: 60px !important;
 }
 
 
@@ -174,17 +192,17 @@ margin-top: 60px !important;
 
 @media only screen and (min-width: 1280px){
 
-	    .aboutImg{
-	    	margin-left: 300px;
-}
+   .aboutImg{
+      margin-left: 300px;
+  }
 
-.paragraph{
-	font-size: 25px;
-margin-left: 20px;
+  .paragraph{
+   font-size: 25px;
+   margin-left: 20px;
 }
 
 .rightParagraph{
-        margin-top: 0px;
+    margin-top: 0px;
     font-weight: 500;
     font-size: 30px;
     padding: 0px;
@@ -209,50 +227,50 @@ margin-left: 20px;
 }
 
 .letterHeading {
-margin-top: 60px;   
+    margin-top: 60px;   
 }
 
 }
 
 @media only screen and (min-width: 1440px){
-	    .aboutImg{
-	    	margin-left: 25%;
-}
+   .aboutImg{
+      margin-left: 25%;
+  }
 
-.paragraph{
-	font-size: 30px;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: -1.1px;
-    margin-left: 20px;
+  .paragraph{
+   font-size: 30px;
+   font-weight: 500;
+   line-height: normal;
+   letter-spacing: -1.1px;
+   margin-left: 20px;
 }
 
 .rightParagraph{
-       font-weight: 500;
-    font-size: 30px;
-    padding: 10px 20px 10px 10px;
-    line-height: normal;
-    letter-spacing: -1.1px;
-    text-align: left;
-        margin-left: -158px !important;
+ font-weight: 500;
+ font-size: 30px;
+ padding: 10px 20px 10px 10px;
+ line-height: normal;
+ letter-spacing: -1.1px;
+ text-align: left;
+ margin-left: -175px !important;
 }
 
 .letterHeading1 {
-      font-size: 3.75rem;
-    text-align: left;
-    font-weight: 700;
-    letter-spacing: 3.9px;
-    color: #37B24A;
-    margin-top: 14px;
+  font-size: 3.75rem;
+  text-align: left;
+  font-weight: 700;
+  letter-spacing: 3.9px;
+  color: #37B24A;
+  margin-top: 14px;
 }
 
 .letterHeading2 {
-       font-size: 2.25rem;
-    text-align: left;
-    font-weight: 600;
-    letter-spacing: 2.9px;
-    color: #000;
-    margin-top: -19px;
+ font-size: 2.25rem;
+ text-align: left;
+ font-weight: 600;
+ letter-spacing: 2.9px;
+ color: #000;
+ margin-top: -19px;
 }
 
 .letterHeading {
@@ -265,4 +283,7 @@ margin-top: 60px;
     margin-left: -34px;
 }
 
+.rightParagraph span {
+    font-size: 25px;
+}
 }
