--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ hr {
 }
 
 .contactHeadings{
-          font-size: 2.75rem;
+          font-size: 1.75rem;
     text-align: center;
     font-weight: 700;
     letter-spacing: 1.5px;
@@ -80,10 +80,14 @@ hr {
 #mobileNumber{
     font-size: 1.25rem;
     text-align: center;
-    font-weight: 600;
-    letter-spacing: 1.3px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
     color: #000;
     margin-top: -8px;
+}
+
+.contact span a {
+    color: black !important;
 }
 
 
