--- a/style.css
+++ b/style.css
@@ -1,293 +1,209 @@
-body{
-	font-family: "Roboto",'Montserrat',Calibri !important;
+.partition{
+  width: 100%;
+  height: 500px;
+  background-color: white;
 }
 
-html{
-	scroll-behavior: auto;
+.partition p {
+    margin-top: 38px;
+    margin-bottom: 1rem;
+    font-size: 100px;
 }
 
-hr {
-    margin-top: 1rem !important;
-    margin-bottom: 1rem !important;
-    border: 1px solid lightgrey !important;
-    border-top: 1px solid rgba(0,0,0,.1) !important;
-}
-
-.navbar{
-	background-color: white !important;
-	/*border-bottom: 1px solid black;*/
-}
-
-.navbar-light .navbar-brand{
-    color: #37B24A !important;
-}
-
-.paragraph{
-    font-size: 20px;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: -1.1px;
-    padding: 10px 25px 10px 25px;
-}
-
-.rightParagraph{
- margin-top: 20px;
- font-weight: 500;
- font-size: 20px;
- padding: 10px 25px 10px 25px;
- line-height: normal;
- letter-spacing: -1.1px;
-}
-
-.letterHeading1 {
-  font-size: 2.75rem;
-  text-align: center;
-  font-weight: 700;
-  letter-spacing: 1.5px;
-  color: #37B24A;
-
-}
-
-.letterHeading2 {
-    font-size: 1.25rem;
+.quote {
+	padding: 10px 20px 10px 20px;
+    font-size: 25px;
     text-align: center;
     font-weight: 600;
-    letter-spacing: 2.9px;
-    color: #000;
-    margin-top: -17px;
+    width: 100%;
+    color: white !important;
+    background-image: linear-gradient(to right, rgba(3,15,5,0.7), rgba(3,15,5,0.7));
+    font-style: italic;
+	}
+
+.quote hr{
+	border-top: 1px solid rgba(0,0,0,2);
+    width: 100px;
 }
 
-.letterHeading h3 h5{
-	line-height: 2.5px;
+.quote h6{
+	font-size: 25px;
+	font-weight: 700;
 }
 
-.hr{
-	border-bottom: 2px solid black;
-}
 
-.jumbotron{
-	background-color: white !important;
-}
+/*ALL MEDIA QUERIES*/
 
-.contactHeadings{
-          font-size: 1.75rem;
-    text-align: center;
+/*MOBILE*/
+
+@media only screen and (max-width: 600px)	
+   {
+    .quote{
+    	font-size: 15px;
+    	font-weight: 500;
+    	padding: 5px;
+    }
+
+    .quote h6 {
+    font-size: 15px;
     font-weight: 700;
-    letter-spacing: 1.5px;
-    color: #37B24A; 
+    padding: 0px 0px 2px 0px;
 }
 
-#mobileNumber{
-    font-size: 1.25rem;
-    text-align: center;
-    font-weight: 500;
-    letter-spacing: 0.5px;
-    color: #000;
-    margin-top: -8px;
 }
 
-.contact span a {
-    color: black !important;
-}
+/*TABLETS*/
 
-
-/*MEDIA QUERIES STARTS*/
-
-/*@media only screen and (min-width: 655px & min-height: 606px){
-
-.aboutImg{
-	margin-left: 16% !important;
-	padding: 30px 25px 10px 25px !important;
-	margin-top: 50px !important;
-}
-
-.img-fluid{
-	    margin-left: 14%;
-}
-
-}*/ 
 
 @media only screen and (min-width: 768px){
+	.quote{
+		display: inline;
+    	font-size: 15px;
+   		padding: 10px 5px 10px 5px;
+	}
 
- .letterHeading{
-    margin-top: 45px;
+	.fa {
+		font-size: 15px !important;
+	}
 }
 
 
-.letterHeading1{
-    text-align: left;
-    margin-left: -91px;
+@media only screen and (min-width: 1024px){
+	.quote{
+		padding: 5px 10px 5px 10px;
+    	font-size: 25px;
+    	font-weight: 600;
+	}
 
-}
-
-.letterHeading2  {
-    text-align: left;
-    margin-left: -83px;
-    letter-spacing: 3.6px;
-}
-
-.rightParagraph {
-   margin-top: 0px;
-   font-weight: 500;
-   font-size: 20px;
-   padding: 0px;
-   line-height: normal;
-   letter-spacing: -1.1px;
-   margin-left: -88px;
-}
-.letterImg{
-    width: 556px !important;
-    margin-left: -34px;
-}
-
-} 
-
-@media only screen and (min-width: 1024px) {
-
-    .navbar-expand-lg .navbar-nav{
-       margin-left: 50%;
-   }
-
-   .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 1.5rem !important;
-    padding-left: 3.5rem !important;
-}
-
-.aboutImg{
-	width: 700px;
-	margin-left: 140px;
-}
-.paragraph{
-	font-size: 25px;
-    margin-left: 20px;
-}
-
-.rightParagraph{
-    margin-top:0px;
-    font-weight: 500;
-    font-size: 22px;
-    padding: 0px; 
-    line-height: normal;
-    letter-spacing: -1.1px;
-}
-
-.letterHeading1 {
-    font-size: 3.75rem;
-    text-align: left;
-    font-weight: 700;
-    letter-spacing: 3.9px;
-    color: #37B24A;
-}
-
-.letterHeading2 {
- font-size: 1.95rem;
- text-align: left;
- font-weight: 600;
- letter-spacing: 4.9px;
- color: #000;
-}
-
-.letterHeading {
-    margin-top: 60px !important;
-}
-
-
-}
-
-@media only screen and (min-width: 1280px){
-
-   .aboutImg{
-      margin-left: 300px;
-  }
-
-  .paragraph{
-   font-size: 25px;
-   margin-left: 20px;
-}
-
-.rightParagraph{
-    margin-top: 0px;
-    font-weight: 500;
-    font-size: 30px;
-    padding: 0px;
-    line-height: normal;
-    letter-spacing: -1.1px;
-}
-
-.letterHeading1 {
-    font-size: 3.75rem;
-    text-align: left;
-    font-weight: 700;
-    letter-spacing: 3.9px;
-    color: #37B24A;
-}
-
-.letterHeading2 {
-    font-size: 2.25rem;
-    text-align: left;
+	.quote h6{
+	font-size: 20px;
     font-weight: 600;
-    letter-spacing: 2.9px;
-    color: #000;
+	}
 }
 
-.letterHeading {
-    margin-top: 60px;   
-}
+@media only screen and (min-width: 1300px){
 
 }
 
 @media only screen and (min-width: 1440px){
-   .aboutImg{
-      margin-left: 25%;
-  }
-
-  .paragraph{
-   font-size: 30px;
-   font-weight: 500;
-   line-height: normal;
-   letter-spacing: -1.1px;
-   margin-left: 20px;
-}
-
-.rightParagraph{
- font-weight: 500;
- font-size: 30px;
- padding: 10px 20px 10px 10px;
- line-height: normal;
- letter-spacing: -1.1px;
- text-align: left;
- margin-left: -175px !important;
-}
-
-.letterHeading1 {
-  font-size: 3.75rem;
-  text-align: left;
-  font-weight: 700;
-  letter-spacing: 3.9px;
-  color: #37B24A;
-  margin-top: 14px;
-}
-
-.letterHeading2 {
- font-size: 2.25rem;
- text-align: left;
- font-weight: 600;
- letter-spacing: 2.9px;
- color: #000;
- margin-top: -19px;
-}
-
-.letterHeading {
-    margin-top: 72px !important;
-    margin-left: -75px;
-}
-
-.letterImg {
-    width: 756px !important;
-    margin-left: -34px;
-}
-
-.rightParagraph span {
+	.quote {    
+	padding: 5px 10px 5px 10px;
     font-size: 25px;
+    font-weight: 400;
+}
+	.quote h6 {
+	font-size: 25px;
+    font-weight: 600;
+	}
+}
+
+
+
+/*ALL MEDIA QUERIES*/
+
+/*HEADER&FOOTER */
+
+.navbar {
+    background-image: linear-gradient(to right, rgba(59,180,75,1), rgba(3,15,5,0.7));
+}
+
+.navbar-brand {
+    margin-top: -3px;
+    font-size: 2.75rem !important;
+    }
+
+.navbar-brand img {
+    width: 40px;
+}
+
+li.nav-item {
+    margin-right: 10px;
+}
+
+footer.page-footer.bg-dark.pt-4 {
+    background-image: linear-gradient(to right, rgba(59,180,75,1), rgba(3,15,5,0.7)) !important;
+    color: white;
+}
+
+
+a {
+    color: white !important;
+    text-decoration: none !important;
+    background-color: transparent;
+}
+
+a:hover {
+    color: black !important;
+    text-decoration: blink !important;
+}
+
+.fa {
+    padding: 7px 0px 7px 0px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 38px;
+}
+
+.fa:hover {
+    background-color: transparent;
+    color: white !important;
+    font-size: 25px; 
+   }
+
+.fa-facebook {
+      background: transparent;
+    color: rgba(255,255,255,.5)!important;
+    transition: font-size;
+}
+
+.fa-instagram {
+    background: transparent;
+    color: rgba(255,255,255,.5)!important;
+    transition: font-size;
+}
+
+.fa-whatsapp {
+      background: transparent;
+    color: rgba(255,255,255,.5)!important;
+    transition: font-size;
+}
+
+
+
+@media only screen and (min-width: 768px){
+	ul.list-line{
+		margin-right: ;
+	}
+}
+
+
+@media only screen and (min-width: 1024px){
+	.pr-3 {
+        margin-left: 19rem !important;
+}
+
+ul.list-inline {
+    margin-right: 160px;
+    float: right;
+}
+
+}
+
+@media only screen and (min-width: 1300px){
+	ul.list-inline {
+    margin-right: 303px;
+ 
 }
 }
+
+@media only screen and (min-width: 1440px){
+	ul.list-inline{
+		margin-right: 338px;
+	}
+}
+
+
+/*HEADER&FOOTER ENDS*/
